Fix overflowing aos text

--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -323,6 +323,12 @@ p {
   // #delivered-text {
 
   // }
+
+  .delivered-text-container {
+    overflow: hidden;
+  }
+
+
   .border-line-1px {
     border-top: 1px solid white;
   }
